# autonomous-data-analyst

./: .gitignore  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  docreview.prompt.md  main.py  prompt.md  pyproject.toml  requirements.txt  课程论文_软件工程_2021001001_张三_autonomous-data-analyst.md  课程论文_软件工程_2021001001_张三_自主数据分析代理.md  课程论文任务书_软件工程_2021001001_张三_autonomous-data-analyst.md  课程论文任务书_软件工程_2021001001_张三_自主数据分析代理.md
.trae/prompts/: CHANGELOG.md  README.md
.trae/prompts/autonomous-data-analyst/: agent-system-prompt.md
.trae/specs/autonomous-data-analyst/: checklist.md  skill-design-specification.md  spec.md  tasks.md
claude-context/specs/: refactor-completion-spec.md
examples/: sample.csv
modules/: analysis_planner.py  data_pipeline.py  dependency_installer.py  method_selector.py  self_review.py
skills/autonomous-data-analyst/: README.md  config.yaml  main.py  prompt.md
skills/autonomous-data-analyst/examples/: ecommerce-analysis.md  finance-analysis.md  user-growth-analysis.md
skills/autonomous-data-analyst/modules/: __init__.py  assumption_tracker.py  data_pipeline.py  data_source_detector.py  goal_parser.py  multi_agent_collaboration.py  report_generator.py  skill_persistence.py  visualization.py
tests/: conftest.py  test_data_pipeline.py  test_goal_parser.py  test_main_integration.py  test_method_selector.py  test_multi_agent.py  test_report_generator.py  test_self_review.py  test_skill_persistence.py  test_visualization.py
