[project]
name = "autonomous-data-analyst"
version = "1.0.0"
description = "自主数据分析代理 - 用户定义目标，AI自主完成全流程分析"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ada = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
